<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="TypographyEllipsis">
    <string name="app_name">Find My Family</string>
    <string name="title_start_screen">Share your location with your \n friend and family</string>
    <string name="get_started">Get started</string>
    <string name="helper_text_start_activity">Already have an account?</string>
    <string name="sign_in">Sign in</string>
    <string name="privacy_policy_phone_sign_up">By signing up you accept privacy policy</string>
    <string name="title_phone_sign_up">Let\'s get started.\nWhat\'s your number?</string>
    <string name="txt_continue">Continue</string>
    <string name="enter_number">Enter Number</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="enter_email">Enter Email</string>
    <string name="title_email_sign_up">Add your email</string>
    <string name="title_name_sign_up">What\'s your Name?</string>
    <string name="title_create_password">Create your Password</string>
    <string name="password">Password</string>
    <string name="title_phone_sign_in">Welcome back!\nEnter you Number</string>
    <string name="sign_in_with_email">Sign in with Email</string>
    <string name="title_email_sign_in">Welcome back!\nEnter your Email</string>
    <string name="sign_in_with_phone_number">Sign in with Phone Number</string>
    <string name="title_enter_pass_sign_in">Enter your Password</string>
    <string name="not">Not</string>
    <string name="forget_password">Forget Password?</string>
    <string name="title_join_circle">Perfect! You\'re about to join\nyour Family</string>
    <string name="you_may_need_to_ask_circle_to_send_code">You may need to ask circle to send code</string>
    <string name="submit">Submit</string>
    <string name="or">OR</string>
    <string name="don_t_have_a_code">Don\'t have a Code?</string>
    <string name="we_ll_give_you_code_to_share">We\'ll give you code to share</string>
    <string name="create_circle">Create Circle</string>
    <string name="give_your_circle_a_name">Give your Circle a name</string>
    <string name="enter_circle_name">Enter circle name</string>
    <string name="you_can_create_circle_for_every_group">You can create Circle for every group.</string>
    <string name="title_share_circle_code">Share this Invite code with\nyour Family</string>
    <string name="this_code_will_be_active_for_3_days">This code will be active for 3 days</string>
    <string name="location_sharing_info">Location sharing is possible only with mutual consent of all family members.</string>
    <string name="share_code">Share code</string>
    <string name="close">Close</string>
    <string name="perfect_you_re_about_to_join_nyour_family">Perfect! You\'re about to join\nyour family</string>
    <string name="here_who_s_waiting_for_you">Here who\'s waiting for you</string>
    <string name="danny_mark">Danny Mark</string>
    <string name="title_request_permission">Find My Family required these\nPermissions to work</string>
    <string name="remind_me_later">Remind me later</string>
    <string name="title_add_profile">Add your Photo</string>
    <string name="add_profile_info">This makes it easy for your\nfamily to find you on map</string>
    <string name="upload_photo">Upload photo</string>
    <string name="skip">Skip</string>
    <string name="title_screen_one">Add places your friends and\nfamily visit, like Home office</string>
    <string name="title_screen_two">! Join your\ncircle and group now</string>
    <string name="title_screen_two_1">Hello </string>
    <string name="title_reset_password">Update Password</string>
    <string name="next">Next</string>
    <string name="sub_title_reset_password">Enter the phone number associated\nwith your account and we\'ll send an\nOTP to update your password</string>
    <string name="title_otp">Code Verification</string>
    <string name="sub_title_otp">We have sent an OTP to</string>
    <string name="title_create_new_pass">Create new password</string>
    <string name="sub_title_create_new_pass">Your new password must be different\nfrom previous used passwords.</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="reset_password">reset Password</string>
    <string name="safety">Safety</string>
    <string name="location">Location</string>
    <string name="join_circle">join circle</string>
    <string name="circle_name">Circle Name</string>
    <string name="title_gps_dialog">Turn on GPS</string>
    <string name="sub_title_gps_dialog">Your GPS setting must be turned on for Find my Family to work. Please turn on your GPS</string>
    <string name="turn_on_gps">Turn On GPS</string>
    <string name="go_to_settings">Go To Settings</string>
    <string name="title_location_dialog">Find my Family only works correctly if it\n access location \'\'All the time\'\'</string>
    <string name="str_1">1. In Find My Family info, click <b>Permissions</b></string>
    <string name="str_2">2. Click on <b>Location permission</b></string>
    <string name="str_3">3. Select <b>Allow all the time</b></string>
    <string name="str_2_camera">2. Click on <b>Camera permission</b></string>
    <string name="str_2_gallery">2. Click on <b>Storage permission</b></string>
    <string name="str_3_camera_gallery">3. Select <b>Allow</b></string>
    <string name="places">Places</string>
    <string name="people">People</string>
    <string name="add_new_member">Add new member</string>
    <string name="check_in">Check In</string>
    <string name="didn_t_receive_otp_code">Didn\'t receive OTP code?</string>
    <string name="resend_code_in">Resend Code</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="minimum_8_character_password">Minimum 8 character Password</string>
    <string name="passwords_matched">Passwords Matched</string>
    <string name="passwords_does_not_match">Passwords does not match</string>
    <string name="map_type">Map Type</string>
    <string name="default_">Default</string>
    <string name="satellite">Satellite</string>
    <string name="terrain">Terrain</string>
    <string name="hybrid">Hybrid</string>
    <string name="safety_access">Safety Access</string>
    <string name="help_alert">Help Alert</string>
    <string name="emergency_contact">Emergency Contact</string>
    <string name="invite_first_contact">Invite First Contact</string>
    <string name="email_already_in_use">The email address is already in use by another account.</string>
    <string name="reset_password_email">Reset Password</string>
    <string name="email_address">Email address</string>
    <string name="sub_title_pass_email">Enter the email associated with your\naccount and we\'ll send an email with\ninstructions to reset your password.</string>
    <string name="send_instructions">Send Instructions</string>
    <string name="check_your_mail">Check your mail</string>
    <string name="sub_title_reset_pass_email">We have sent a password recovery\nlink to your email.</string>
    <string name="open_email_app">Open email app</string>
    <string name="skip_i_ll_confirm_later">Skip, I\'ll confirm later</string>
    <string name="txt_footer_">Did not receive email? Check your spam filter,\nor try another email address</string>
    <string name="how_will_add_this_person">How will add this person?</string>
    <string name="select_from_contact">Select from contact</string>
    <string name="add_manually">Add Manually</string>
    <string name="search_view">Search View</string>
    <string name="added">Added</string>
    <string name="phone_no">Phone No</string>
    <string name="contact_name">Contact Name</string>
    <string name="cn">CN</string>
    <string name="enter_invite_code">Enter Invite Code</string>
    <string name="enter_circle_invite_code">Enter Circle Invite code</string>
    <string name="cancel">Cancel</string>
    <string name="join">Join</string>
    <string name="invite_members_to">Invite members to</string>
    <string name="last_seen">Last seen:</string>
    <string name="phone_number">Phone Number</string>
    <string name="save">Save</string>
    <string name="add_emergency_contact_nto_your_circle">Add emergency contact\nto your circle?</string>
    <string name="add">add</string>
    <string name="no_contacts_found">No Contacts Found</string>
    <string name="approval_pending">Approval Pending</string>
    <string name="sending_emergency_alert">Sending\nEmergency Alert</string>
    <string name="sos_will_be_sent_once_timer_goes_off">Emergency Contact will be notified once timer goes off</string>
    <string name="tap_the_timer_to_stop">Tap the timer to stop</string>
    <string name="seconds">Seconds</string>
    <string name="timer_start">00 : 10</string>
    <string name="time_start_with_zero">00 :</string>
    <string name="time_start">00 : 0</string>
    <string name="sos_title">Emergency Alert</string>
    <string name="sos_body"> needs your help. Tap to view current Location</string>
    <string name="emergency_location">Emergency Location</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="send_sms_permission">SMS Permission</string>
    <string name="sub_title_send_sms_dialog">SMS permission is required to send live location message to added emergency contact(s) when Emergency SOS is triggered</string>
    <string name="allow_permission">Allow Permission</string>
    <string name="deny">Deny</string>
    <string name="resend_invite">Resend Invite</string>
    <string name="delete">Delete</string>
    <string name="add_new_contact">Add New Contact</string>
    <string name="chats">Chats</string>
    <string name="search_members">Search members</string>
    <string name="user_name">User Name</string>
    <string name="last_send_received_message">Last Send/Received Message</string>
    <string name="yesterday">Yesterday</string>
    <string name="dec_12_2022_12_30_pm">Dec 12, 2022 12:30 PM</string>
    <string name="no_messages_yet">No messages yet...</string>
    <string name="txt_content_no_messages">Send a message or reply\nwith a greeting sticker\nbelow!</string>
    <string name="message">Message...</string>
    <string name="can_you_please_share_your_current_location">Can you please share your current location?</string>
    <string name="_4_30_pm">4:30 PM</string>
    <string name="okay_sure">okay. Sure</string>
    <string name="please_wait">Please wait...</string>
    <string name="title_no_member">No Messages Yet</string>
    <string name="sub_title_no_members">No Members. Add member in circle and start chatting</string>
    <string name="date">date</string>
    <string name="phone_no_already_registered">Phone Number already registered.</string>
    <string name="personal_data">Personal Data</string>
    <string name="circle_management">Circle Management</string>
    <string name="about">About</string>
    <string name="sign_out">Sign Out</string>
    <string name="profile">Profile</string>
    <string name="account_details">Account Details</string>
    <string name="account_management">Account Management</string>
    <string name="edit_phone_number">Edit Phone Number</string>
    <string name="edit_email_address">Edit Email Address</string>
    <string name="change_password">Change Password</string>
    <string name="delete_account">Delete Account</string>
    <string name="update">update</string>
    <string name="update_password">Update Password</string>
    <string name="recent_authentication_required">Recent Authentication Required !</string>
    <string name="sub_title">This operation requires recent authentication. Log in again before retrying this request.</string>
    <string name="log_out">Log Out</string>
    <string name="member_ship">Membership</string>
    <string name="driving">Drive Tracker</string>
</resources>