<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".StartScreen.StartScreenActivity"
    android:background="@drawable/background_start_screen">

    <TextView
        android:id="@+id/app_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_start_screen"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="@dimen/_16ssp"
        android:textAlignment="center"
        android:layout_marginTop="@dimen/_40sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:id="@+id/btn_sign_up"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/orange_rounded_button"
        android:text="@string/get_started"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_title"
        app:layout_constraintVertical_bias="0.05"
        app:layout_constraintWidth_percent="0.8" />

    <TextView
        android:id="@+id/txt_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/helper_text_start_activity"
        android:textColor="@color/white"
        android:textSize="@dimen/_12ssp"
        android:layout_marginTop="@dimen/_15sdp"
        app:layout_constraintHorizontal_bias="0.3"
        app:layout_constraintStart_toStartOf="@id/btn_sign_up"
        app:layout_constraintEnd_toEndOf="@id/btn_sign_up"
        app:layout_constraintTop_toBottomOf="@id/btn_sign_up"/>

    <TextView
        android:id="@+id/txt_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:textColor="@color/orange"
        android:textStyle="bold"
        android:textSize="@dimen/_12ssp"
        android:layout_marginStart="@dimen/_5sdp"
        app:layout_constraintStart_toEndOf="@id/txt_message"
        app:layout_constraintTop_toTopOf="@id/txt_message"/>

</androidx.constraintlayout.widget.ConstraintLayout>