<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/drawable_round_no_padding">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recent_authentication_required"
        android:textStyle="bold"
        android:textSize="@dimen/_18ssp"
        android:textAlignment="center"
        android:textColor="@color/orange"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/sub_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent="0.7"
        android:text="@string/sub_title"
        android:textAlignment="center"
        android:textSize="@dimen/_14ssp"
        android:textColor="#99000000"
        android:layout_marginTop="@dimen/_15sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_log_out"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent="0.8"
        android:background="@drawable/orange_rounded_button"
        android:text="@string/log_out"
        android:textColor="@color/white"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sub_title" />

    <TextView
        android:id="@+id/text_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textColor="@color/orange"
        android:textSize="@dimen/_12ssp"
        android:padding="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginBottom="@dimen/_5sdp"
        app:layout_constraintStart_toStartOf="@id/btn_log_out"
        app:layout_constraintEnd_toEndOf="@id/btn_log_out"
        app:layout_constraintTop_toBottomOf="@id/btn_log_out"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>