<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CheckEmailActivity">

    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/img_icon"
        android:layout_width="@dimen/_120sdp"
        android:layout_height="@dimen/_120sdp"
        app:roundPercent="0.5"
        android:src="@drawable/icon_reset_email"
        app:layout_constraintVertical_bias="0.15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
    
    <TextView
        android:id="@+id/txt_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check_your_mail"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="@dimen/_20ssp"
        android:padding="@dimen/_2sdp"
        android:layout_marginTop="@dimen/_15sdp"
        app:layout_constraintTop_toBottomOf="@id/img_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/txt_sub_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/_2sdp"
        android:textAlignment="center"
        android:text="@string/sub_title_reset_pass_email"
        android:textSize="@dimen/_14ssp"
        android:textStyle="bold"
        android:textColor="@color/darkGrey"
        android:layout_marginTop="@dimen/_15sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_title"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_open_email_app"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent="0.8"
        android:background="@drawable/orange_rounded_button"
        android:text="@string/open_email_app"
        android:textColor="@color/white"
        android:layout_marginTop="@dimen/_40sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_sub_title"/>

    <TextView
        android:id="@+id/txt_skip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/skip_i_ll_confirm_later"
        android:textAlignment="center"
        android:textSize="@dimen/_14ssp"
        android:textColor="@color/darkGrey"
        android:textStyle="bold"
        android:padding="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_15sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_open_email_app"/>

    <TextView
        android:id="@+id/txt_footer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_footer_"
        android:textAlignment="center"
        android:textColor="@color/darkGrey"
        android:textSize="@dimen/_12ssp"
        android:textStyle="italic|bold"
        app:layout_constraintVertical_bias="0.9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>