<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".HomeScreen.ui.FragmentSafety.EmergencySOS.EmergencySOSActivity">

    <TextView
        android:id="@+id/txt_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sending_emergency_alert"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="@dimen/_24ssp"
        app:layout_constraintVertical_bias="0.15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/txt_sub_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sos_will_be_sent_once_timer_goes_off"
        android:textStyle="bold"
        android:textSize="@dimen/_14ssp"
        android:textColor="#80000000"
        android:textAlignment="center"
        android:layout_marginTop="@dimen/_15sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_title"/>

    <TextView
        android:id="@+id/txt_sos_trigger"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="@dimen/_200sdp"
        android:background="@drawable/red_circle_drawable"
        android:layout_marginTop="@dimen/_40sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_sub_title"/>

    <TextView
        android:id="@+id/txt_timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/timer_start"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="@dimen/_28ssp"
        app:layout_constraintTop_toTopOf="@id/txt_sos_trigger"
        app:layout_constraintBottom_toBottomOf="@id/txt_sos_trigger"
        app:layout_constraintStart_toStartOf="@id/txt_sos_trigger"
        app:layout_constraintEnd_toEndOf="@id/txt_sos_trigger"/>

    <TextView
        android:id="@+id/txt_seconds"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/seconds"
        android:textSize="@dimen/_14ssp"
        android:textColor="#B3FFFFFF"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@id/txt_timer"
        app:layout_constraintStart_toStartOf="@id/txt_timer"
        app:layout_constraintEnd_toEndOf="@id/txt_timer"/>

    <TextView
        android:id="@+id/txt_helper_stop_timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tap_the_timer_to_stop"
        android:textSize="@dimen/_12ssp"
        android:textStyle="bold"
        android:textColor="#B3000000"
        android:layout_marginTop="@dimen/_25sdp"
        app:layout_constraintHorizontal_bias="0.5"
        tools:visibility="visible"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/txt_sos_trigger"
        app:layout_constraintStart_toStartOf="@id/txt_sos_trigger"
        app:layout_constraintEnd_toEndOf="@id/txt_sos_trigger"/>

    <com.google.android.gms.ads.AdView
        android:id="@+id/banner_ad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:adSize="BANNER"
        app:adUnitId="ca-app-pub-3940256099942544/6300978111"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>