<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/round_permission_dialog">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/how_will_add_this_person"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="@dimen/_18ssp"
        android:layout_marginTop="@dimen/_15sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_select_from_contact"
        android:layout_width="0dp"
        app:layout_constraintWidth_percent="0.8"
        android:layout_height="wrap_content"
        android:background="@drawable/orange_rounded_button"
        android:text="@string/select_from_contact"
        android:textColor="@color/white"
        android:layout_marginTop="@dimen/_15sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"/>

    <TextView
        android:id="@+id/txt_add_manually"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_manually"
        android:textColor="@color/black"
        android:textSize="@dimen/_14ssp"
        android:padding="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        app:layout_constraintStart_toStartOf="@id/btn_select_from_contact"
        app:layout_constraintEnd_toEndOf="@id/btn_select_from_contact"
        app:layout_constraintTop_toBottomOf="@id/btn_select_from_contact"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>